--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,24 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-grid>
+   <ion-row>
 
+    <ion-col width-100>
+      <ion-list>
+        <ion-item>
+          <strong>App Name: </strong> MyWeather
+        </ion-item>
+
+        <ion-item>
+            <strong>Version: </strong> 1.0.0
+          </ion-item>
+
+          <ion-item>
+              <strong>Description: </strong> MyWeather is a simple weather app
+            </ion-item>
+      </ion-list>
+    </ion-col>
+   </ion-row>
+  </ion-grid>
 </ion-content>
