Need to figure out Observable and setting data

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,15 +5,14 @@
 </ion-header>
 
 <ion-content padding class="home">
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-grid *ngIf="weather">
+    <ion-row>
+      <ion-col width-50 offset-25>
+        <h2 class="location"> {{weather[0]['Country']['EnglishName']}} </h2>
+        <h2> {{weather[0]['Key']}} </h2>
+        <div class="icon"><img src="" alt=""></div>
+      </ion-col>
+    </ion-row>
 
-  <h2>Have a look at the new and improved way of developing apps from scratch! Yeah!!!</h2>
+  </ion-grid>
 </ion-content>
