App has basic functionality, need to add persistance for location

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -20,7 +20,7 @@
             <strong>Version: </strong> 1.0.0
           </ion-item>
 
-          <ion-item>
+          <ion-item text-wrap>
               <strong>Description: </strong> MyWeather is a simple weather app
             </ion-item>
       </ion-list>
