--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -21,7 +21,7 @@
           </ion-item>
 
           <ion-item text-wrap>
-              <strong>Description: </strong> MyWeather is a simple weather app that uses AccuWeather API for weather information.
+              <strong>Description: </strong> MyWeather is a simple weather app that uses the AccuWeather API for weather information.
             </ion-item>
       </ion-list>
     </ion-col>
